Add missing backquote.

--- a/doc/shortcuts.mdwn
+++ b/doc/shortcuts.mdwn
@@ -31,7 +31,7 @@ This page controls what shortcut links the wiki supports.
 * [[shortcut name=cia url="http://cia.vc/stats/project/%s"]]
 * [[shortcut name=ciauser url="http://cia.vc/stats/user/%s"]]
 * [[shortcut name=flickr url="http://www.flickr.com/photos/%s"]]
-* [[shortcut name=zooomr url="http://www.zooomr.com/photos/%s"]] (Note: You have to include the username and number in here, such as bob/123455`.)
+* [[shortcut name=zooomr url="http://www.zooomr.com/photos/%s"]] (Note: You have to include the username and number in here, such as `bob/123455`.)
 
 To add a new shortcut, use the `shortcut` [[PreprocessorDirective]]. "%s" is
 replaced with the text passed to the named shortcut. The optional `desc`
