web commit by JoshTriplett: See "using the web interface with a real text editor" on the [[tips]] page. --[[JoshTriplett]]

--- a/doc/bugs/word_wrap.mdwn
+++ b/doc/bugs/word_wrap.mdwn
@@ -1,3 +1,6 @@
 Web browsers don't word-wrap lines in submitted text, which makes editing a
 page that someone wrote in a web browser annoying (`gqip` is vim user's
 friend here). Is there any way to improve this?
+
+> See "using the web interface with a real text editor" on the [[tips]]
+> page. --[[JoshTriplett]]
