web commit by http://ptecza.myopenid.com/: * Testing Polish diacritical characters

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -16,6 +16,8 @@ OpenID test. It works!!
 
 Test..
 
+There are Polish diacritical characters: ą, ć, ę, ł, ń, ó, ś, ż, ź.
+
 # Header
 
 ## Subheader
