* Updated French translation from JLC. Closes: #417982

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,7 +37,10 @@ ikiwiki (1.49) UNRELEASED; urgency=low
   * Add Homepage field.
   * Add XS-Vcs-Browser field.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 05 Apr 2007 20:09:26 -0700
+  [ Joey Hess ]
+  * Updated French translation from JLC. Closes: #417982
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 13:14:15 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
