* Reorder the icon in the template above the stylesheets, to avoid icon   flashing during page load.

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,8 +39,10 @@ ikiwiki (1.49) UNRELEASED; urgency=low
 
   [ Joey Hess ]
   * Updated French translation from JLC. Closes: #417982
+  * Reorder the icon in the template above the stylesheets, to avoid icon
+    flashing during page load.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 13:14:15 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 13:30:20 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
