web commit by JoshTriplett: Similar to [[wiki_links_still_processed_inside_code_blocks]]

--- a/doc/bugs/Smileys_in_the_block_code.mdwn
+++ b/doc/bugs/Smileys_in_the_block_code.mdwn
@@ -25,3 +25,7 @@ mailing list. Please looks below to see what ikiwiki does with that smileys:
 BTW, maybe converting smileys in the block code should be disabled at all?
 
 --Pawel
+
+> Looks similar to [[wiki_links_still_processed_inside_code_blocks]]; in both
+> cases, substitution happens in a code block, which it shouldn't.
+> --[[JoshTriplett]]
