--- a/doc/wikilink/discussion.mdwn
+++ b/doc/wikilink/discussion.mdwn
@@ -12,3 +12,9 @@ BTW, ikiwiki doesn't displays the #foo anchor in the example
 ("To link to an anchor inside a page...") at [[WikiLink]] page...
 
 --Pawel
+
+> No such syntax exists in markdown.  ikiwiki could certainly have a
+> [[preprocessor_directive|preprocessordirective]] for it, though.
+>
+> The lack of the `#foo` anchor in the anchor example on [[wikilink]]
+> definitely looks like a bug.  --[[JoshTriplett]]
