web commit by JoshTriplett: Use an inline code block for HTML.

--- a/doc/todo/block_external_links.mdwn
+++ b/doc/todo/block_external_links.mdwn
@@ -1,6 +1,6 @@
 I'd like the ability to block external links from anonymous users, or from
 untrusted users.  This could work by generating the HTML for the new page and
-comparing it to the HTML for the old page, looking for any new &lt;a&gt; tags with
+comparing it to the HTML for the old page, looking for any new `<a>` tags with
 href values that didn't exist in the old page and don't start with the URL of
 the wiki.  Comparing the HTML, rather than the input, allows usage with
 various types of input formats, and ensures that a template, shortcut, or some
