add a separate svg for the favico to allow generation of a 16x16 one, so that browsers like firefox will not try to resize it

--- a/doc/logo.mdwn
+++ b/doc/logo.mdwn
@@ -29,6 +29,10 @@ added).
 
   Contributed by Recai Oktaş
 
+* [[favicon.svgz]] is used to generate the favicon.ico:
+
+        inkscape -w 16 -i favicon -e favicon.ico ikiwiki.svgz
+
 * [[ikiwiki_logo|ikiwiki_old2.png]]
 
   [[SVG_source|ikiwiki_old2.svgz]] to this older version of the logo.
