* Fix display of escaped wikilinks containing anchors.

--- a/doc/wikilink/discussion.mdwn
+++ b/doc/wikilink/discussion.mdwn
@@ -18,3 +18,5 @@ BTW, ikiwiki doesn't displays the #foo anchor in the example
 >
 > The lack of the `#foo` anchor in the anchor example on [[wikilink]]
 > definitely looks like a bug.  --[[JoshTriplett]]
+
+>> Fixed that --[[Joey]]
