--- a/debian/changelog
+++ b/debian/changelog
@@ -43,8 +43,9 @@ ikiwiki (1.49) UNRELEASED; urgency=low
     flashing during page load.
   * Fix smiley plugin to scan smileys.mdwn after it's updated, which fixes
     a bug caused by committing changes to smilies.mdwn.
+  * Fix display of escaped wikilinks containing anchors.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 16:32:09 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 17:17:52 -0400
 
 ikiwiki (1.48) unstable; urgency=low
 
