web commit by http://dmarti.myopenid.com/

--- a/doc/news/seeking_article_writer.mdwn
+++ b/doc/news/seeking_article_writer.mdwn
@@ -13,3 +13,6 @@ request:
 > a wiki as a bug tracking system.
 
 --[[Joey]]
+
+
+>> Article by Joey now available: [Integrated issue tracking with Ikiwiki](http://www.linuxworld.com/news/2007/040607-integrated-issue-tracking-ikiwiki.html)  Thank you. --[Don Marti](http://www.linuxworld.com/community/?q=blog/6)
