Add the Integrated issue tracking with Ikiwiki article, which was orginally published on linuxworld.com. Republished here with their permission, as their contract allows me to keep the copyright and use it in this free software project.

--- a/doc/examples/softwaresite.mdwn
+++ b/doc/examples/softwaresite.mdwn
@@ -11,3 +11,6 @@ Some additional configuration you might want to do:
   there is a [[softwaresite/Makefile]] that will use ikiwiki to build
   static html documentation. ikiwiki itself uses a similar system to build
   its documentation.
+
+* Read the [[tips/issue_tracking]] article for tips about how to use
+  ikiwiki as a BTS.
