--- a/doc/tips.mdwn
+++ b/doc/tips.mdwn
@@ -27,3 +27,9 @@ you to use a real text editor like Emacs or Vim to edit the contents of text
 areas.  This allows you to edit ikiwiki pages with a real text editor through
 the ikiwiki web interface, rather than only with direct commit
 access. --[[JoshTriplett]]
+
+## using ikiwiki as an issue tracker
+
+[[This_article|issue_tracking]] has some thoughts and tips on using ikiwiki
+as a BTS, as is done on this very wiki to track [[bugs]] and [[todo]] items
+for ikiwiki.
