--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -7,12 +7,10 @@ First published on [LinuxWorld.com](http:://www.linuxworld.com/), a
 publication of Network World Inc., 118 Turnpike Rd., Southboro, MA 01772.
 """]]
 
-Wikis are not just for encyclopedias and websites
-anymore. You can use [Ikiwiki](http://ikiwiki.info)
-in combination with your revision control system to
-handle issue tracking, news feeds, and other needs of
-a software project. The wiki can make your bug reports
-as much a part of your software project as its code,
+Wikis are not just for encyclopedias and websites anymore. You can use
+Ikiwiki in combination with your revision control system to handle issue
+tracking, news feeds, and other needs of a software project. The wiki can
+make your bug reports as much a part of your software project as its code,
 with interesting results.
 
 Ikiwiki is a wiki engine with a twist.  It's best
@@ -42,7 +40,7 @@ Ikiwiki is a full-featured wiki that you can use
 for a variety of purposes, from traditional wikis
 to weblogs, podcasting, or even aggregating other
 sites' RSS feeds into a Planet page. While people
-are [using](http://ikiwiki.info/ikiwikiusers.html)
+are [[using|ikiwikiusers.html]]
 Ikiwiki for purposes ranging from genealogy research
 to shoe accessory sales, one thing it's especially
 well suited for is collaborative software development,
@@ -56,8 +54,7 @@ The simplest way to use ikiwiki is to build static
 HTML files from source wiki files. This example builds
 a wiki for an imaginary software project.  The wiki
 source files used in this example are available in the
-[examples/softwaresite](http://ikiwiki.info/examples/softwaresite.html)
-section of ikiwiki's documentation.
+[[examples/softwaresite]] section of ikiwiki's documentation.
 
 	wiki$ ls
 	Makefile  bugs.mdwn     doc/      download.mdwn  news/
@@ -97,7 +94,7 @@ and tie it into the build system using the Makefile.
 Ikiwiki can also be tied into the `post-commit` hook of your revision
 control system, so that whenever a developer commits a change to a wiki
 page in revision control, the project's web site is automatically updated.
-The [ikiwiki tutorial](http://ikiwiki.info/setup.html) explains in
+The [[ikiwiki_tutorial|setup]] explains in
 detail how to set this up using the Subversion, Git, TLA, and Mercurial
 revision control systems.
 
@@ -154,23 +151,23 @@ be inlined into a given page. A few examples:
 * A typical list of all open bugs, with their full text, and a form to post new
   bugs.
 
-  	\[[inline pages="bugs/* and !link(done) and !*/Discussion" actions=yes postform=yes show=0]]
+        \[[inline pages="bugs/* and !link(done) and !*/Discussion" actions=yes postform=yes show=0]]
 
 * Index of the 30 most recently fixed bugs.
 
-  	\[[inline pages="bugs/* and link(done) and !*/Discussion" sort=mtime show=30 archive=yes]]
+        \[[inline pages="bugs/* and link(done) and !*/Discussion" sort=mtime show=30 archive=yes]]
 
 * Index of the 10 most recently active bugs.
 
-  	\[[inline pages="bugs/* and !link(done) and !*/Discussion" sort=mtime show=10]]
+        \[[inline pages="bugs/* and !link(done) and !*/Discussion" sort=mtime show=10]]
 
 * Open security issues.
 
-  	\[[inline pages="bugs/* and link(security) and !link(done) and !*/Discussion"]]
+        \[[inline pages="bugs/* and link(security) and !link(done) and !*/Discussion"]]
 
 * Full text of bugs assigned to Joey.
 
-  	\[[inline pages="bugs/* and link(owner/Joey) and !link(done) and !*/Discussion" show=0]]
+        \[[inline pages="bugs/* and link(owner/Joey) and !link(done) and !*/Discussion" show=0]]
 
 It may seem strange to consider using a wiki for issue tracking when there
 are several dedicated bug tracking systems, like Bugzilla, that handle all
@@ -272,8 +269,5 @@ their own version of the website, use it to track bugs for that branch, and
 when the branch is ready, all these changes can be merged back into the
 mainline of the project.
 
-Ikiwiki powers its own bug tracking
-system.  To see how wiki bug tracking
-works in practice, visit the [ikiwiki bugs
-page](http://ikiwiki.info/bugs.html) or the project
-[TODO list](http://ikiwiki.info/todo.html).
+Ikiwiki powers its own bug tracking system.  To see how wiki bug tracking
+works in practice, visit the [[bug]] or [[TODO]] pages.
