--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -270,4 +270,4 @@ when the branch is ready, all these changes can be merged back into the
 mainline of the project.
 
 Ikiwiki powers its own bug tracking system.  To see how wiki bug tracking
-works in practice, visit the [[bug]] or [[TODO]] pages.
+works in practice, visit the [[bugs]] or [[TODO]] pages.
