--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -40,7 +40,7 @@ Ikiwiki is a full-featured wiki that you can use
 for a variety of purposes, from traditional wikis
 to weblogs, podcasting, or even aggregating other
 sites' RSS feeds into a Planet page. While people
-are [[using|ikiwikiusers.html]]
+are [[using|ikiwikiusers]]
 Ikiwiki for purposes ranging from genealogy research
 to shoe accessory sales, one thing it's especially
 well suited for is collaborative software development,
