web commit by JoshTriplett: Use full path "examples/softwaresite" in reference to ikiwiki's documentation.

--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -54,7 +54,8 @@ The simplest way to use ikiwiki is to build static
 HTML files from source wiki files. This example builds
 a wiki for an imaginary software project.  The wiki
 source files used in this example are available in the
-[[examples/softwaresite]] section of ikiwiki's documentation.
+[[examples/softwaresite|examples/softwaresite]] section
+of ikiwiki's documentation.
 
 	wiki$ ls
 	Makefile  bugs.mdwn     doc/      download.mdwn  news/
