web commit by JoshTriplett: Typo fix.

--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -18,7 +18,7 @@ described by the term "wiki compiler". Just as a
 typical software project consists of source code
 that is stored in revision control and compiled with
 `make` and `gcc`, an ikiwiki-based wiki is stored as
-human editable source in a revision control system,
+human-editable source in a revision control system,
 and built into HTML using ikiwiki.
 
 Ikiwiki uses your revision control system to track
