web commit by JoshTriplett: Fix duplicated "moreinfo" tag.

--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -129,8 +129,8 @@ While directories are useful for broad hierarchical
 grouping, tags are better for categorizing issues
 as bugs, wishlist items, security issues, patches,
 or whatever other categories are useful. Bugs can
-be tagged "moreinfo", "done" "unreproducible",
-or "moreinfo", etc, to document different stages of
+be tagged "moreinfo", "done", "unreproducible",
+etc, to document different stages of
 their lifecycle. A developer can take ownership of a
 bug by tagging it with something like "owner/Joey".
 
