web commit by JoshTriplett: Re-add link to article in LinuxWorld.com.

--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -3,8 +3,9 @@
 By Joey Hess, LinuxWorld.com
 
 [[template id=note text="""
-First published on [LinuxWorld.com](http:://www.linuxworld.com/), a
-publication of Network World Inc., 118 Turnpike Rd., Southboro, MA 01772.
+[First published](http://www.linuxworld.com/news/2007/040607-integrated-issue-tracking-ikiwiki.html)
+on [LinuxWorld.com](http:://www.linuxworld.com/), a publication of Network
+World Inc., 118 Turnpike Rd., Southboro, MA 01772.
 """]]
 
 Wikis are not just for encyclopedias and websites anymore. You can use
