web commit by JoshTriplett: Plural fix.

--- a/doc/tips/issue_tracking.mdwn
+++ b/doc/tips/issue_tracking.mdwn
@@ -35,7 +35,7 @@ In the rare cases where automatic merging fails
 because of concurrent edits to the same part of a
 page, regular commit conflict markers are shown in
 the file to let you resolve the conflict, as you
-would for conflicting edit in source code.
+would for conflicting edits in source code.
 
 Ikiwiki is a full-featured wiki that you can use
 for a variety of purposes, from traditional wikis
