--- a/doc/roadmap.mdwn
+++ b/doc/roadmap.mdwn
@@ -30,6 +30,8 @@ Released 29 April 2006.
   (./)
 * No serious known [[bugs]]
 * No severe-to-moderate known [[security]] issues.
+* Conversion support for existing other wikis.
+  (Being worked on for Moin Moin and TWiki by Josh and Jamey)
 
 2.0 will also be an opportunity to remove old backwards compiatbility
 features and make other changes to the default configuration. Some things
