* Remove stray semicolon in linkmap.pm.

--- a/debian/changelog
+++ b/debian/changelog
@@ -45,7 +45,10 @@ ikiwiki (1.49) UNRELEASED; urgency=low
     a bug caused by committing changes to smilies.mdwn.
   * Fix display of escaped wikilinks containing anchors.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 17:17:52 -0400
+  [ Josh Triplett ]
+  * Remove stray semicolon in linkmap.pm.
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 06 Apr 2007 17:28:22 -0700
 
 ikiwiki (1.48) unstable; urgency=low
 
