--- a/doc/plugins/write.mdwn
+++ b/doc/plugins/write.mdwn
@@ -218,8 +218,8 @@ CGI::FormBuilder]] to generate web forms. These hooks are passed named
 parameters: `cgi`, `session`, and `form`. These are, respectively, the
 `CGI` object, the user's `CGI::Session`, and a `CGI::FormBuilder`.
 
-Each time a form is set up, the formbuilder_setup hook is called.
-Typically the formbuilder_setup hook will check the form's title, and if
+Each time a form is set up, the `formbuilder_setup` hook is called.
+Typically the `formbuilder_setup` hook will check the form's title, and if
 it's a form that it needs to modify, will call various methods to
 add/remove/change fields, tweak the validation code for the fields, etc. It
 will not validate or display the form.
