web commit by http://annodomini.livejournal.com/: Testing, and complaining about page names

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -2,6 +2,10 @@ This is the SandBox, a page anyone can edit to try out ikiwiki.
 
 ----
 
+So, I'm wondering why ikiwiki requires links to have no spaces in their names, and uses .html suffixes. I really don't like having to use [[CamelCase]] for multi-word links, and it's generally not good practice to encode stuff like filetype or specific technologies in the URL; that's what we have a MIME type for. Anyhow, this is really just a test for playing around in the sanbox, but those are the two things that bother me the most off the bat about ikiwiki.
+
+----
+
 testing openid ... ignore.
 
 Test. Проверка. テスト ığüşöçİ ทดสอบ éphémère
