--- a/doc/bugs/No_numbacklinks_setting_for___34__no_limit__34__.mdwn
+++ b/doc/bugs/No_numbacklinks_setting_for___34__no_limit__34__.mdwn
@@ -1,1 +1,4 @@
-No value for `numbacklinks` will achieve a setting of "no limit". --[[JoshTriplett]]
+No value for `numbacklinks` will achieve a setting of "no limit".
+--[[JoshTriplett]]
+
+0 [[done]] --[[Joey]]
